# taskforeman

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/taskforeman/config/: settings.py
src/taskforeman/core/: manager.py
src/taskmaster/: __init__.py
src/taskmaster/config/: __init__.py
src/taskmaster/core/: __init__.py  exceptions.py  worker.py
tests/: conftest.py  test_manager.py  test_settings.py  test_worker.py
