[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskforeman"
version = "0.1.0"
description = "A bounded, fault-tolerant async worker pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Operating System :: OS Independent",
	"Framework :: AsyncIO",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
